Reformulate from 'we' to a perspective of the website itself

--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -717,7 +717,7 @@
   "mission": {
     "title": "Our mission",
     "text1": "To provide the conceptual, ethical, and experiential tools for individuals and communities to <strong>internalize a universal perspective</strong>, thereby becoming more effective, compassionate, and wise agents in the unfolding story of the cosmos.",
-    "text2": "We believe humanity urgently needs this perspective to navigate climate change, existential risks, and the transition to planetary civilization. Universal thinking isn't optional—it's essential for our survival and flourishing."
+    "text2": "Humanity urgently needs this perspective to navigate climate change, existential risks, and the transition to planetary civilization. Universal thinking isn't optional—it's essential for our survival and flourishing."
   },
   "quote": {
     "sagan": "We are a way for the cosmos to know itself.",
@@ -732,7 +732,7 @@
       "title": "What is Universalize?",
       "paragraph1": "Universalize is a philosophical, scientific, and experiential exploration of what it means to adopt a <strong class=\"text-blue-300\">universal perspective</strong>—to see from the vantage point of the whole, embracing all dimensions of reality in their infinite diversity and underlying unity.",
       "paragraph2": "It represents the fourth movement in a quartet of interconnected explorations: from <strong>self</strong> (Spiralize) to <strong>Self</strong> (Nondualize) to <strong>we</strong> (Communize) to <strong>all of us, everywhere, across all scales and times</strong> (Universalize).",
-      "paragraph3": "We believe humanity urgently needs this perspective to navigate climate change, existential risks, and the transition to planetary civilization. Universal thinking isn't optional—it's essential for our survival and flourishing."
+      "paragraph3": "Humanity urgently needs this perspective to navigate climate change, existential risks, and the transition to planetary civilization. Universal thinking isn't optional—it's essential for our survival and flourishing."
     },
     "journey": {
       "title": "The complete journey",
@@ -765,22 +765,22 @@
       "paragraph3": "The \"Universal Challenges\" pillar of Universalize directly engages with governance questions, making GGF a natural companion for those ready to move from perspective to practice."
     },
     "philosophy": {
-      "title": "Our philosophy",
+      "title": "The website's philosophy",
       "open": {
         "title": "Open and free",
         "description": "No paywalls, no tracking, no monetization. This knowledge belongs to everyone. All content is freely shared under CC BY-SA 4.0."
       },
       "grounded": {
         "title": "Grounded in daily life",
-        "description": "Universal perspective isn't abstract philosophy—it transforms how we eat breakfast, make decisions, and relate to others. We focus on practical applications."
+        "description": "Universal perspective isn't abstract philosophy—it transforms how we eat breakfast, make decisions, and relate to others. The focus is on practical applications."
       },
       "developmental": {
         "title": "Developmentally aware",
-        "description": "We honor that people engage universal perspective from different developmental stages. There are multiple entry points, each valid and valuable."
+        "description": "Honoring that people engage universal perspective from different developmental stages. There are multiple entry points, each valid and valuable."
       },
       "emotional": {
         "title": "Emotionally balanced",
-        "description": "We cultivate awe, humility, urgency, joy, and responsibility—a full emotional palette for engaging with our cosmic context without overwhelm or despair."
+        "description": "Cultivating awe, humility, urgency, joy, and responsibility—a full emotional palette for engaging with our cosmic context without overwhelm or despair."
       }
     },
     "quote": {
