--- a/static/i18n/sv.json
+++ b/static/i18n/sv.json
@@ -717,7 +717,7 @@
   "mission": {
     "title": "Vårt uppdrag",
     "text1": "Att tillhandahålla de konceptuella, etiska och erfarenhetsmässiga verktygen för individer och gemenskaper att <strong>internalisera ett universellt perspektiv</strong>, och därigenom bli mer effektiva, medkännande och visa aktörer i kosmos fortlöpande berättelse.",
-    "text2": "Vi tror att mänskligheten brådskande behöver detta perspektiv för att navigera klimatförändringar, existentiella risker och övergången till planetär civilisation. Universellt tänkande är inte valfritt—det är väsentligt för vår överlevnad och vårt blomstrande."
+    "text2": "Mänskligheten behöver detta perspektiv brådskande för att navigera klimatförändringar, existentiella risker och övergången till planetär civilisation. Universellt tänkande är inte valfritt—det är väsentligt för vår överlevnad och vårt blomstrande."
   },
   "quote": {
     "sagan": "Vi är ett sätt för kosmos att känna sig själv.",
@@ -732,7 +732,7 @@
       "title": "Vad är Universalize?",
       "paragraph1": "Universalize är en filosofisk, vetenskaplig och erfarenhetsbaserad utforskning av vad det innebär att anamma ett <strong class=\"text-blue-300\">universellt perspektiv</strong> – att se från helhetens synvinkel och omfamna alla verklighetens dimensioner i deras oändliga mångfald och underliggande enhet.",
       "paragraph2": "Det representerar den fjärde rörelsen i en kvartett av sammanlänkade utforskningar: från <strong>jag</strong> (Spiralize) till <strong>Själv</strong> (Nondualize) till <strong>vi</strong> (Communize) till <strong>alla oss, överallt, över alla skalor och tider</strong> (Universalize).",
-      "paragraph3": "Vi tror att mänskligheten akut behöver detta perspektiv för att navigera klimatförändringar, existentiella risker och övergången till en planetär civilisation. Universellt tänkande är inte valfritt – det är avgörande för vår överlevnad och vårt blomstrande."
+      "paragraph3": "Mänskligheten behöver akut detta perspektiv för att navigera klimatförändringar, existentiella risker och övergången till en planetär civilisation. Universellt tänkande är inte valfritt – det är avgörande för vår överlevnad och vårt blomstrande."
     },
     "journey": {
       "title": "Den kompletta resan",
@@ -765,22 +765,22 @@
       "paragraph3": "Pelaren \"Universella utmaningar\" i Universalize engagerar sig direkt i styrningsfrågor, vilket gör GGF till en naturlig följeslagare för dem som är redo att gå från perspektiv till praktik."
     },
     "philosophy": {
-      "title": "Vår filosofi",
+      "title": "Webbplatsens filosofi",
       "open": {
         "title": "Öppet och gratis",
         "description": "Inga betalväggar, ingen spårning, ingen intäktsgenerering. Denna kunskap tillhör alla. Allt innehåll delas fritt under CC BY-SA 4.0."
       },
       "grounded": {
         "title": "Grundat i vardagen",
-        "description": "Universellt perspektiv är inte abstrakt filosofi – det omvandlar hur vi äter frukost, fattar beslut och relaterar till andra. Vi fokuserar på praktiska tillämpningar."
+        "description": "Universellt perspektiv är inte abstrakt filosofi – det omvandlar hur vi äter frukost, fattar beslut och relaterar till andra. Fokus är på praktiska tillämpningar."
       },
       "developmental": {
         "title": "Utvecklingsmedvetet",
-        "description": "Vi hedrar att människor engagerar sig i universellt perspektiv från olika utvecklingsstadier. Det finns flera ingångar, var och en giltig och värdefull."
+        "description": "Webbplatsen hedrar att människor engagerar sig i universellt perspektiv från olika utvecklingsstadier. Det finns flera ingångar, var och en giltig och värdefull."
       },
       "emotional": {
         "title": "Emotionellt balanserat",
-        "description": "Vi kultiverar vördnad, ödmjukhet, brådska, glädje och ansvar – en fullständig emotionell palett för att engagera oss i vårt kosmiska sammanhang utan överväldigande eller förtvivlan."
+        "description": "Webbplatsen kultiverar vördnad, ödmjukhet, brådska, glädje och ansvar – en fullständig emotionell palett för att engagera oss i vårt kosmiska sammanhang utan överväldigande eller förtvivlan."
       }
     },
     "quote": {
