Refine about section in Swedish

--- a/static/i18n/sv.json
+++ b/static/i18n/sv.json
@@ -780,7 +780,7 @@
       },
       "emotional": {
         "title": "Emotionellt balanserat",
-        "description": "Webbplatsen kultiverar vördnad, ödmjukhet, brådska, glädje och ansvar – en fullständig emotionell palett för att engagera oss i vårt kosmiska sammanhang utan överväldigande eller förtvivlan."
+        "description": "Universalize kultiverar vördnad, ödmjukhet, brådska, glädje och ansvar – en fullständig emotionell palett för att engagera oss i vårt kosmiska sammanhang utan överväldigande eller förtvivlan."
       }
     },
     "quote": {
